<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="product"
            type="com.moya.shopping.model.Product" />
    </data>

    <androidx.cardview.widget.CardView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/product_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_padding"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/medium_margin"
            android:padding="@dimen/medium_padding">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:contentDescription="@string/product_image_content_description"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:loadImage="@{product.image}" />

            <TextView
                android:id="@+id/product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_margin"
                android:gravity="start|center_vertical"
                android:lines="2"
                android:padding="@dimen/small_padding"
                android:text="@{product.name}"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Product name" />

            <RatingBar
                android:id="@+id/product_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:numStars="5"
                android:rating="@{product.review.summary.average/2}"
                app:layout_constraintEnd_toStartOf="@id/product_review_count"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                tools:rating="2" />

            <TextView
                android:id="@+id/product_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@{@string/reviews(product.review.summary.count)}"
                android:textSize="@dimen/note_text_size"
                app:layout_constraintStart_toEndOf="@id/product_rating"
                app:layout_constraintTop_toBottomOf="@id/product_name"
                tools:text="75 reviews" />

            <TextView
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingStart="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toBottomOf="@id/product_rating"
                app:textOrHide="@{product.descriptions.get(0)}"
                tools:text="Description 2" />

            <TextView
                android:id="@+id/product_second_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/product_image"
                app:layout_constraintTop_toBottomOf="@id/product_description"
                app:textOrHide="@{product.descriptions.get(1)}"
                tools:text="Description 1" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="6dp"
                android:text="@{@string/price_dollar(product.price)}"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cart_button"
                tools:text="300" />

            <ImageView
                android:id="@+id/cart_button"
                android:layout_width="@dimen/cart_icon_size"
                android:layout_height="@dimen/cart_icon_size"
                android:layout_marginBottom="3dp"
                android:contentDescription="@string/cart_icon_content_description"
                android:src="@drawable/ic_add_cart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
